# lacreisaude_api

./: README.md  manage.py  pyproject.toml
lacreisaude-backend/: .gitignore  Dockerfile  README.md  backup.sql  deploy.sh  docker-compose.yml  pyproject.toml  rollback.sh
lacreisaude-backend/app/consultas/: models.py  serializers.py  tests.py  urls.py  views.py
lacreisaude-backend/app/consultas/migrations/: 0001_initial.py  0002_alter_consulta_profissional_delete_profissional.py
lacreisaude-backend/app/lacreisaude_api/: health.py  settings.py  urls.py  wsgi.py
lacreisaude-backend/app/profissionais/: models.py  serializers.py  tests.py  urls.py  views.py
lacreisaude-backend/app/profissionais/migrations/: 0001_initial.py
lacreisaude-backend/workflows/: ci.yml
lacreisaude_api/: asgi.py
