[project]
name = "lacreisaude-api"
version = "0.1.0"
description = "A RESTful API for medical consultation management"
authors = [
    {name = "Paulo Vial",email = "paulovitormvd@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.11.1"
coverage = "^7.8.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.0"
blue = "^0.9.1"
isort = "^6.0.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.6.11"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.10"